画像の差し替え

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+ 
+<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
@@ -13,17 +14,193 @@
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="" />
 <meta property="og:locale" content="ja_JP" />
-<title>TOP</title>
-<link href="assets/stylesheets/bundle.css" rel="stylesheet"></head>
+<title>IKEDA FUKUI, JAPAN</title>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+
+<link href="assets/stylesheets/bundle319fea951ccf72456dde.css" rel="stylesheet"></head>
 <body>
-<div class="l-wrap"></div>
+<div class="l-wrap">
+
+<header id="top" class="l-header js-header">
+  <div class="flex p-header__bar">
+    <h1><a  href="#"><img class="p-header__logo" src="../assets/images/h_logo.png" width="105px" height="40px"></a></h1>
+    <div class="p-header__humberger js-header__humberger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <div>
+      <nav class="p-header__nav">
+        <ul>
+          <li class="p-header__list"><a href="#">Top</a></li>
+          <li class="p-header__list"><a href="#">Unforgettable Winter Day!</a></li>
+          <li class="p-header__list"><a href="#">Experience</a></li>
+          <li class="p-header__list"><a href="#">Stories</a></li>
+          <li class="p-header__list"><a href="#">- Wood</a></li>
+          <li class="p-header__list"><a href="#">- Water</a></li>
+          <li class="p-header__list"><a href="#">- Rice</a></li>
+          <li class="p-header__list">Spot Guide</li>
+          <li class="p-header__list"><a href="#">- Dining & Shopping</a></li>
+          <li class="p-header__list"><a href="#">- Sightseeing Spot</a></li>
+          <li class="p-header__list"><a href="#">- Activities</a></li>
+          <li class="p-header__list"><a href="#">- Accommodation</a></li>
+          <li class="p-header__list"><a href="#">Map & Access</a></li>
+          <li class="p-header__list"><a href="#">About this site</a></li>
+          <li class="p-header__list"><a href="#">Sitemap</a></li>
+        </ul>
+      </nav>      
+    </div>
+  </div>
+  <div class="p-header_overlay js-header_overlay"></div>
+</header>
 
 
-<h1>トップページへようこそ！！</h1>
-<a href="/about">to about</a>
-<div class="p-home-bg"></div>
-<div class="p-home-grid"></div>
+
+<div id="main" class="l-main">
+    <div class="swiper-container p-main_keyVisual">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv01.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv02.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv03.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv04.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv05.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv06.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv07.jpg"></div>
+            <div class="swiper-slide"><img class="swiper_img" src="../assets/images/kv08.jpg"></div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+      
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev swiper-custom-button"></div>
+        <div class="swiper-button-next swiper-custom-button"></div>
+      </div>
+</div>
+<div id="experience" class="l-experience">
+    <h2 class="c-title__sub">Experience</h2>
+    <div class="c-bar--black"></div>
+      <div class="p-experience__button c-btn c-btnColor--experience p-experience__btn--hover is-hide is-up"><a href="#"><p class="c-btn__text">Unforgettable Winter Day!</p></a></div>
+    <ul class="p-experience__menu flex flex_center is-hide is-up">
+      <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_feb2018_DSC6314.jpg" width="335px"></a><p>Walking in the snow</p></li>
+      <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_sep2017_DSC4965-2-1.jpg" width="335px"></a><p>Fly in the mountain</p></li>
+      <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_nov2018_DSC8086.jpg" width="335px"></a><p>Making mochi (rice cakes)</p></li>
+      <li class="p-experience__images"><a href="#"><img src="../assets/images/DSCF9076.jpg" width="335px"></a><p>Soak in a Onsen(hot spring)</p></li>
+      <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_feb2018_DSC6745.jpg" width="335px"></a><p>Making Shimenawa</p></li>
+      <li class="p-experience__images"><a href="#"><img src="../assets/images/ikeda_dec2005_DSCF2474.jpg" width="335px"></a><p>Watch the moonlit mountains</p></li>
+    </ul>
+    <div class=c-experience__circleBtn><a href="#">And more</a></div>
+</div>
+
+<div id="stories" class="l-stories">
+  <div class="p-stories__wrap">
+    <h2 class="c-title__sub">Stories<br>-Three Treasures of Ikeda-</h2>
+    <div class="c-bar--black"></div>
+    <ul class="p-stories__list">
+      <li class="p-stories__list-box flex is-hide is-up">
+        <div class="p-stories__images"><img src="../assets/images/top_life_wood.png" width="258px"></div>
+        <div>
+          <p class="p-stories__text">Forests take decades to grow. Cedar is indispensable to house building ...</p>
+          <div class="p-stories__btn c-btn c-btnColor--wood"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
+        </div>
+      </li>
+      <li class="p-stories__list-box flex is-hide is-up">
+        <div class="p-stories__images"><img src="../assets/images/top_life_water.png" width="258px"></div>
+        <div>
+          <p class="p-stories__text">Ikeda Town has a lot of rain. Forested area that occupies 90% of the ...</p>
+          <div class="p-stories__btn c-btn c-btnColor--water"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
+        </div>
+      </li>
+      <li class="p-stories__list-box flex is-hide is-up">
+        <div class="p-stories__images"><img src="../assets/images/top_life_rice.png" width="258px"></div>
+        <div>
+          <p class="p-stories__text">Rice is the staple food of the Japanese people. Rice is grown on ...</p>
+          <div class="p-stories__btn c-btn c-btnColor--rice"><a href="#"><p class="c-btn__text">Read detail</p></a></div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div id="spotGuide" class="l-spotGuide">
+  <div class="p-spotGuide__wrap">
+    <h2 class="c-title__sub">Sopt & Guide</h2>
+    <div class="c-bar--black"></div>
+    <ul class="p-spotGuide__list flex is-hide is-up">
+      <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_ds.jpg" width="340px"></a><p class="p-spotGuide__text">- Dining & Shopping</p></li>
+      <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_ss.jpg" width="340px"></a><p class="p-spotGuide__text">- Sightseeing Spot</p></li>
+      <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_act.jpg" width="340px"></a><p class="p-spotGuide__text">- Activities</p></li>
+      <li class="p-spotGuide__images"><a href="#"><img src="../assets/images/top_spot_acm.jpg" width="340px"></a><p class="p-spotGuide__text">- Accommodation</p></li>
+    </ul>
+  </div>
+</div>
+
+<div id="mapAccess" class="l-mapAccess">
+  <div class="p-mapAccess__wrap">
+    <h2 class="c-title__sub">Map & Access</h2>
+    <div class="c-bar--black"></div>
+    <div class="p-mapAccess__gmap is-hide is-up" >
+
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d414106.8239481942!2d135.86065822225385!3d35.81933376336501!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5fff55a870acbe11%3A0xa215f311ee70e60!2z56aP5LqV55yM!5e0!3m2!1sja!2sjp!4v1555469009133!5m2!1sja!2sjp" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    </div>
+    <div class="p-mapAccess__button c-btn c-btnColor--map"><a href="#"><p class="c-btn__text">Illust map</p></a></div>
+    <div class="p-mapAccess__map"><img src="../assets/images/top_map_illust.jpg" width="100%"></div>
+    <div class="p-mapAccess__textArea">
+      <p class="p-mapAccess__title">By car</p>
+      <ul class="p-mapAccess__list">
+        <li>About 3.5 hours from Osaka</li>
+        <li>About 2.5 hours from Nagoya<br>(You can use "Takefu IC" at Meishin Expressway to Hokuriku Expressway)</li>
+        <li>About 2 hours from Kanazawa<br>(Use "Sabae IC" at Hokuriku Expressway)</li>
+      </ul>
+      <p class="p-mapAccess__title">By train / To nearest JR Takefu station</p>
+      <ul class="p-mapAccess__list">
+        <li>About 2 hours from Osaka</li>
+        <li>About 2 hours from Nagoya</li>
+        <li>About 1 hour from Kanazawa</li>
+        <li>About 3.5 hours from Tokyo<br>* About 1 hour from "JR Takefu station" by Fukutetsu bus to "Ikeda-cho (Inari bus stop)"</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div id="sns" class="l-sns">
+  <div class="p-sns__wrap">
+    <div>
+      <ul class="flex flex_center">
+        <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_fb.png" width="45px"></a></lic>
+        <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_ut.png" width="45px"></a></li>
+        <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_vimeo.png" width="45px"></a></li>
+        <li class="p-sns__icon"><a href="#"><img src="../assets/images/icon_insta.png" width="45px"></a></li>
+        <li class="p-sns__bubble"><img src="../assets/images/icon_fukidashi.png" width="150px"></li>
+      </ul>
+    </div>
+  </div>
+</div>  
+
+
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="assets/javascripts/bundle.js"></script></body>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
+<script type="text/javascript" src="assets/javascripts/bundle319fea951ccf72456dde.js"></script></body>
+<footer class="l-footer">
+  <div class="l-footer__contact">
+    <div><a href="#"><img src="../assets/images/f_logo.png" width="90px"></a></div>
+    <p class="p-footer__nameText">Ikeda Farm Village Tourist Association</p>
+    <p class="p-footer__placeText">36-25-1 Inari, Ikeda cho, Imadate gun Fukui<br>(C/O Kottekote Ikeda)</p>
+    <p class="p-footer__contactText">+81-778-44-8060<br><a href="#">Contact</a></p>
+  </div>
+    <div class="l-footer__menu flex flex_spaceBet">
+      <ul class="flex">
+        <li class="l-footer__menuText"><a href="#">About this site</a></li>
+        <li class="l-footer__menuText"><a href="#">Sitemap</a></li>
+      </ul>
+      <small>&copy;2018 Ikeda Farm Village Tourist Association</small>
+    </div>
+</footer>
 </html>
